turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:50: error: ';' expected but 'with' found.
     * but with possibly more states (ie, bigger second dimension), and more color (ie bigger third -- internal -- dimension) 
           ^Turmite:51: error: ';' expected but ',' found.
     * and naturally, less boring than this turmite doing absolutely nothing (runs forward endlessly).
                    ^